x.x.x xxxx-xx-xx
UI: Added new message count to the accounts page
UI: Show state of outgoing message in chatlist

1.3.0 2023-12-03
Feature: Verified 1:1 chats
Feature: HTML message view
UI: Changed workflow for voice message recording
UI: Changed attachment preview in compose area
UI: Setting for font size in chatlist and chats
Other: Internal refactoring to reduce delay when opening a chat
Other: Use deltachat-core-rust v1.131.9
Bugfix: Deleting attachments from the compose area did not work in all cases
Bugfix: Changing the avatar in the profile settings is possible again

1.2.0 2023-10-27
Feature: Database encryption (config + text only, blobs remain unencrypted)
Feature: Small colored shape signalling connectivity state in chatlist view
UI: Add account ID to account info popup in Known Accounts page
Other: Use deltachat-core-rust v1.127.0
Other: In case of mismatch, filename extensions of image attachments are corrected so QML displays them
Bugfix: Delete temporary account if user cancels creation of new account via login
Bugfix: In some cases, large messages were not shown
Bugfix: Correctly handle account switch when in archive

1.1.1 2023-09-13
Bugfix: Settings item "Only fetch from DeltaChat folder" did not act correctly
Feature: Connectivity information
UI: Image viewer: Double tap will alternate between scaling image to fit screen and original size; removed pre-scaling of small images
UI: Better highlighting of contact requests
Other: Improve readability of logging output; add missing events to log; add timestamps to log

1.1.0 2023-07-24
Feature: Clear chat
Feature: Act as primary device to add second device via QR code
Feature: In-app QR code scanning
Feature: Load QR code as image
UI: Adapt link colors for better contrast
UI: Show information if provider needs special settings
UI: Truncate long quoted texts; click toggles expand/collapse if jump to quoted msg is not possible
Bugfix: Correctly format links after newline