@@ -36,6 +36,7 @@ class EmitterThread : public QThread {
     signals:
             void newMsg(uint32_t accID, int chatID, int msgID);
             void msgsChanged(uint32_t accID, int chatID, int msgID);
+            void msgsNoticed(uint32_t accID, int chatID);
             void msgFailed(uint32_t accID, int chatID, int msgID);
             void msgDelivered(uint32_t accID, int chatID, int msgID);
             void msgRead(uint32_t accID, int chatID, int msgID);
